--- a/src/components/Help/Help.css
+++ b/src/components/Help/Help.css
@@ -14,7 +14,7 @@
 }
 .help__button-box {
   height: 39%;
-  padding-bottom: 3%;
+  padding-bottom: 2%;
   display: flex;
   flex-direction: column;
   column-gap: 2%;
