--- a/src/components/MenuButton/MenuButton.css
+++ b/src/components/MenuButton/MenuButton.css
@@ -47,7 +47,7 @@
 }
 .menu-button.btn-my-tariff {
   width: 100%;
-  height: 20%;
+  height: 19%;
   background-color: var(--dark-blue);
   font-size: 1.7rem;
 }
@@ -85,7 +85,7 @@
 }
 .menu-button.btn-our-values {
   height: 18%;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
   width: 100%;
   background-color: var(--orange);
 }
@@ -97,7 +97,7 @@
 }
 .menu-button.btn-our-possibilities {
   height: 18%;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
   width: 100%;
   background-color: var(--rose);
 }
@@ -249,5 +249,14 @@
   .menu-button__icon {
     width: 25px !important;
     height: 25px !important;
+  }
+}
+@media screen and (max-height: 552px) {
+  .menu-button__icon {
+    width: 20px !important;
+    height: 20px !important;
+  }
+  .menu-button {
+    padding: 5px 12px;
   }
 }
